🩹 fix: Gap and flex-basis for answers of Quiz

--- a/src/styles/components/quiz/sectionQuiz.module.scss
+++ b/src/styles/components/quiz/sectionQuiz.module.scss
@@ -1,5 +1,7 @@
 @import "../../abstract/variables.scss";
 
+$gapSize : 10px;
+
 #sectionQuiz {
     display: flex;
     flex-direction: column;
@@ -19,11 +21,11 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    gap: $gapSize;
 }
 
 #sectionAnswers > * {
-    flex-basis: 45%;
-    margin: 10px;
+    flex-basis: calc(50% - $gapSize);
 }
 
 #sectionButton {
@@ -44,31 +46,9 @@
 
 /* MEDIA QUERIES */
 
-/* DEFAULT */
-/* Extra small devices (phones, 480px and down) */
-@media only screen and (max-width: 480px){
-}
-
-/* Small devices (phones, between 480px and 600px) */
-@media only screen and (min-width: 480px) and (max-width: 600px) {
-}
-
-/* Medium devices (portrait tablets and large phones, between 600px and 768px) */
-@media only screen and (min-width: 600px) and (max-width: 768px) {
-    
-}
-
-/* Large devices (landscape tablets, between 768px and 992px) */
-@media only screen and (min-width: 768px) and (max-width: 992px) {
-    
-}
-
-/* Extra large devices (laptops/desktops, between 992px and 1200px) */
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
-    
-}
-
-/* Extra extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-    
+/* Extra small and small devices (phones, between 600px and down) */
+@media only screen and (max-width: 600px) {
+    #sectionAnswers > * {
+        flex-basis: calc(100% - $gapSize);
+    }
 }
